# deckdex_mtg

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  card_fetcher.py  config.example.yaml  config.yaml  docker-compose.yml  magic_card_processor.py  main.py  pyproject.toml  requirements.txt  run_cli.py  session-2026-03-07-parallel-sprint-2.md  setup-web.sh  spreadsheet_client.py  start-web.sh
.claude/: settings.json
.cursor/skills/agents/references/examples/fastapi-app/: .env.example  AGENTS.md  pyproject.toml
.cursor/skills/agents/references/examples/fastapi-app/src/: AGENTS.md  __init__.py  config.py  main.py
.cursor/skills/agents/references/examples/fastapi-app/src/models/: __init__.py  item.py  user.py
.cursor/skills/agents/references/examples/fastapi-app/src/routes/: __init__.py  health.py  items.py  users.py
.cursor/skills/agents/references/examples/fastapi-app/src/services/: __init__.py  item_service.py  user_service.py
backend/: AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  requirements-api.txt
claude-ops/: README.md  install.sh
deckdex/: AGENTS.md  CLAUDE.md  card_fetcher.py  config.py  config_loader.py  dry_run_client.py  logger_config.py  magic_card_processor.py  spreadsheet_client.py
docs/: agent-workflow-architecture.md  getting_started.md  session-2026-03-07-parallel-implement.md  session-2026-03-08-spec-backlog-sprint.md
frontend/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
migrations/: 001_cards_table.sql  002_sessions_table.sql  003_card_images_table.sql  004_decks_tables.sql  004_global_image_cache.sql  005_users_table.sql  006_add_user_id.sql  007_add_quantity_to_cards.sql  008_jobs_table.sql  009_group_cards_by_name_set.sql  010_catalog_tables.sql  011_migrate_images_to_filesystem.py  README.md  (+4 more)
(+864 files in other folders)
